--- a/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
+++ b/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
@@ -63,7 +63,7 @@
     <Compile Include="File.cs" />
     <Compile Include="ChessGame.cs" />
     <Compile Include="ChessGamePlayer.cs" />
-    <Compile Include="GameStage.cs" />
+    <Compile Include="Evaluation\GameStage.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Move.Generate.cs" />
     <Compile Include="MovePicker.cs" />
