--- a/NoraGrace/NoraGrace.Engine.Tests/NoraGrace.Engine.Tests.csproj
+++ b/NoraGrace/NoraGrace.Engine.Tests/NoraGrace.Engine.Tests.csproj
@@ -75,6 +75,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="SearchTest.cs" />
+    <Compile Include="StaticExchangeTests.cs" />
     <Compile Include="TransTableTests.cs" />
   </ItemGroup>
   <ItemGroup>
