refactoring time management

--- a/NoraGrace/NoraGrace/App.config
+++ b/NoraGrace/NoraGrace/App.config
@@ -15,8 +15,8 @@
     <logger name="NoraGrace.CommandLine">
       <level value="INFO" />
     </logger>
-    <logger name="Sinobyl.Engine.TimeManagerBase">
-      <level value="ERROR" />
+    <logger name="NoraGrace.Engine.TimeManager">
+      <level value="DEBUG" />
     </logger>
     <appender name="logFileAppender" type="log4net.Appender.FileAppender">
       <file type="log4net.Util.PatternString">
