removed outpost for now

--- a/NoraGrace/NoraGrace/App.config
+++ b/NoraGrace/NoraGrace/App.config
@@ -16,7 +16,7 @@
       <level value="INFO" />
     </logger>
     <logger name="NoraGrace.Engine.TimeManager">
-      <level value="DEBUG" />
+      <level value="WARN" />
     </logger>
     <appender name="logFileAppender" type="log4net.Appender.FileAppender">
       <file type="log4net.Util.PatternString">
