--- a/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
+++ b/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Helpers.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Move.Generate.cs" />
+    <Compile Include="Move.Text.cs" />
     <Compile Include="MovePicker.cs" />
     <Compile Include="SearchDepth.cs" />
     <Compile Include="StaticExchange.cs" />
