--- a/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
+++ b/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ChessGame.cs" />
     <Compile Include="ChessGamePlayer.cs" />
     <Compile Include="Evaluation\GameStage.cs" />
+    <Compile Include="GameResult.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Move.Generate.cs" />
