--- a/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
+++ b/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Evaluation\MaterialEvaluator.cs" />
     <Compile Include="Evaluation\PawnEvaluator.cs" />
     <Compile Include="Evaluation\PcSqEvaluator.cs" />
+    <Compile Include="Evaluation\ScaleFactor.cs" />
     <Compile Include="Evaluation\Settings.cs" />
     <Compile Include="FEN.cs" />
     <Compile Include="File.cs" />
