added searchdata and lazyeval classes

--- a/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
+++ b/NoraGrace/NoraGrace.Engine/NoraGrace.Engine.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Evaluation\EvalResults.cs" />
     <Compile Include="Evaluation\Helpers\Mobility.cs" />
     <Compile Include="Evaluation\Helpers\QuadraticBezier.cs" />
+    <Compile Include="Evaluation\Lazy.cs" />
     <Compile Include="Evaluation\MaterialEvaluator.cs" />
     <Compile Include="Evaluation\PawnEvaluator.cs" />
     <Compile Include="Evaluation\PcSqEvaluator.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Move.Generate.cs" />
     <Compile Include="Move.Text.cs" />
     <Compile Include="MovePicker.cs" />
+    <Compile Include="SearchData.cs" />
     <Compile Include="SearchDepth.cs" />
     <Compile Include="StaticExchange.cs" />
     <Compile Include="Opening.cs" />
