move islegal teste, checkinfo fix

--- a/NoraGrace/NoraGrace.Engine.Tests/NoraGrace.Engine.Tests.csproj
+++ b/NoraGrace/NoraGrace.Engine.Tests/NoraGrace.Engine.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="FENTest.cs" />
     <Compile Include="GameTest.cs" />
     <Compile Include="gm2600.cs" />
+    <Compile Include="MoveTests.cs" />
     <Compile Include="MovegenTest.cs" />
     <Compile Include="PGNTests.cs" />
     <Compile Include="PhasedScoreTests.cs" />
