--- a/NoraGrace/NoraGrace.Web.Model/NoraGrace.Web.Model.csproj
+++ b/NoraGrace/NoraGrace.Web.Model/NoraGrace.Web.Model.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameCreateOptions.cs" />
     <Compile Include="GameInfo.cs" />
     <Compile Include="GameRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
