--- a/NoraGrace/NoraGrace.Web.Model.Tests/NoraGrace.Web.Model.Tests.csproj
+++ b/NoraGrace/NoraGrace.Web.Model.Tests/NoraGrace.Web.Model.Tests.csproj
@@ -69,6 +69,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="GameInfoTests.cs" />
     <Compile Include="MoqChessDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameRepositoryTests.cs" />
