--- a/NoraGrace/NoraGrace.Web.Model.Tests/App.config
+++ b/NoraGrace/NoraGrace.Web.Model.Tests/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -14,4 +15,23 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <log4net>
+    <root>
+      <level value="WARN" />
+      <appender-ref ref="TraceAppender" />
+    </root>
+    <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%timestamp %logger - %message%newline" />
+      </layout>
+    </appender>
+    <logger name="NoraGrace.Web">
+      <level value="DEBUG" />
+      <appender-ref ref="TraceAppender" />
+    </logger>
+    <logger name="NoraGrace.Web.Model.GameService">
+      <level value="DEBUG" />
+      <appender-ref ref="TraceAppender" />
+    </logger>
+  </log4net>
 </configuration>
