--- a/NoraGrace/NoraGrace.Web.Model.Tests/packages.config
+++ b/NoraGrace/NoraGrace.Web.Model.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="Moq" version="4.5.23" targetFramework="net452" />
 </packages>
