--- a/NoraGrace/NoraGrace.Web/NoraGrace.Web.csproj
+++ b/NoraGrace/NoraGrace.Web/NoraGrace.Web.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Games\CreateViewModel.cs" />
+    <Compile Include="ViewModels\Games\DetailsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -252,9 +253,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\DbGames\Create.cshtml" />
     <Content Include="Views\DbGames\Delete.cshtml" />
-    <Content Include="Views\DbGames\Details.cshtml" />
-    <Content Include="Views\DbGames\Edit.cshtml" />
     <Content Include="Views\DbGames\Index.cshtml" />
+    <Content Include="Views\DbGames\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
